# PlantUML-Offline

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/jre/: release
src-tauri/src/: commands.rs  lib.rs  main.rs  plantuml_server.rs
src/components/Editor/: Editor.css  Editor.tsx
src/components/Preview/: Preview.css  Preview.tsx
src/components/ServerStatus/: ServerStatus.css  ServerStatus.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/Toolbar/: Toolbar.css  Toolbar.tsx
src/lib/plantuml/: embeddedServer.ts  language.ts  renderer.ts
src/stores/: editorStore.ts  serverStore.ts  settingsStore.ts
src/styles/: App.css  index.css
src/types/: plantuml-encoder.d.ts
